--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <canvas id="bg" aria-hidden="true"></canvas>
 
 <header class="nav">
-  <div class="brand">Dinesh<span>•</span>Bh</div>
+  <div class="brand">Dinesh<span>•</span>Bhairoju</div>
   <nav>
     <a href="#work">Work</a>
     <a href="#skills">Skills</a>
